[gd_scene load_steps=13 format=3 uid="uid://bs4x45635h4sd"]

[ext_resource type="Texture2D" uid="uid://data2a3um3a1v" path="res://assets/background/1.png" id="1_a2gi6"]
[ext_resource type="Script" path="res://scripts/intro.gd" id="1_l5uh7"]
[ext_resource type="Texture2D" uid="uid://c0d5aqixgpcsv" path="res://assets/background/2.png" id="2_5a8oq"]
[ext_resource type="Texture2D" uid="uid://bmmoq4k836e33" path="res://assets/background/3.png" id="3_5yqpx"]
[ext_resource type="Texture2D" uid="uid://dhw5u8asa3s4b" path="res://assets/background/4.png" id="4_3fqlu"]
[ext_resource type="Texture2D" uid="uid://dt17u6jd5xrqo" path="res://assets/background/5.png" id="5_1soux"]
[ext_resource type="FontFile" uid="uid://dym4xs216swth" path="res://assets/fonts/TheGlobePersonalUseBold-2ORlw.ttf" id="6_agc5y"]
[ext_resource type="FontFile" uid="uid://bddklc6bjvmt5" path="res://assets/fonts/DirtyHeadline-x39K.ttf" id="7_t7aji"]

[sub_resource type="Animation" id="Animation_fxmhb"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.00784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.966667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/CanvasLayer/CenterContainer/MarginContainer/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 2.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_boypf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/CanvasLayer/CenterContainer/MarginContainer/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera2D/CanvasLayer/MarginContainer2/Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1iovu"]
resource_name = "fade_out"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.66667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.00784314), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/CanvasLayer/CenterContainer/MarginContainer/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0999999, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button2:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0999999, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Camera2D/CanvasLayer/MarginContainer2/Label:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_te5hb"]
_data = {
"RESET": SubResource("Animation_boypf"),
"fade_in": SubResource("Animation_fxmhb"),
"fade_out": SubResource("Animation_1iovu")
}

[node name="Intro" type="Node2D"]
script = ExtResource("1_l5uh7")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(960, 539.5)
scale = Vector2(3.33333, 3.33025)
texture = ExtResource("1_a2gi6")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(960, 539.5)
scale = Vector2(3.33333, 3.33025)
texture = ExtResource("2_5a8oq")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(960, 539.5)
scale = Vector2(3.33333, 3.33025)
texture = ExtResource("3_5yqpx")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(960, 539.5)
scale = Vector2(3.33333, 3.33025)
texture = ExtResource("4_3fqlu")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(960, 539.5)
scale = Vector2(3.33333, 3.33025)
texture = ExtResource("5_1soux")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(962, 542)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.5
offset_top = -42.0
offset_right = 387.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/CenterContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_agc5y")
theme_override_font_sizes/font_size = 120
text = "The Last Message"

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.5
offset_top = -490.0
offset_right = 140.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_bottom = 160

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_t7aji")
theme_override_font_sizes/font_size = 24
text = "
start

"

[node name="Button2" type="Button" parent="Camera2D/CanvasLayer/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_t7aji")
theme_override_font_sizes/font_size = 24
text = "
credits

"

[node name="MarginContainer2" type="MarginContainer" parent="Camera2D/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -40.0
offset_right = 230.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Develop for BUET CSE FEST 2024 Game Jam © Team TwoBits"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
offset_left = -962.0
offset_top = -541.0
offset_right = 964.0
offset_bottom = 538.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_te5hb")
}
autoplay = "fade_in"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
